package Classes;

public class Enums {
    /**
     *Hanganyag tárolási típusai
     */
    public enum Audiotype{
        Hanglemez,
        Kazetta,
        CD
    }
}
